# cr-streamlit

./: CMakeLists.txt  Dockerfile  api.py  app.py  benchmarking.py  bleh.py  docker-compose.yml  requirements.txt
src/cpp_include/: _ast.hpp  crexpr.hpp  crnum.hpp  crobj.hpp  crprod.hpp  crsum.hpp  crtrig.hpp
src/cpp_src/: _ast.cpp  crexpr.cpp  crnum.cpp  crobj.cpp  crprod.cpp  crsum.cpp  crtrig.cpp
src/py/: __init__.py  app.py  interface.py
tests/: app.py  test.py
